--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mon Jeu de Bus</title>
+  <title>Jeu de Bus</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
-    <h1>🚌 Gestion de Bus</h1>
+    <h1>🚌 Gestionnaire de Lignes</h1>
     <p>Solde actuel : <span id="money">0 €</span></p>
-
-    <button id="run-line">🚍 Faire une ligne de bus (+100€)</button>
+    <button id="run-line">🚍 Faire une ligne de bus (+10 000 €)</button>
 
     <h2>Débloquer des bus</h2>
     <div id="bus-store"></div>
